0023690: Miscellaneous minor enhancements in OCAF/XDE